fix resolution text overlapping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -421,6 +421,7 @@ p.impressum {
     border-bottom-style: solid;
     border-bottom-width: 2px;
     border-bottom-color: white;
+    overflow:auto;
 
 }
 .detailsRight{
@@ -440,6 +441,7 @@ p.impressum {
     }
     .detailsLeft{
         padding-bottom: 130px;
+        overflow:auto;
     }
 }
 
@@ -466,6 +468,7 @@ p.impressum {
     height:597px;
     padding-bottom: 0px;
     border :none;
+    overflow:auto;
 }
 .scrollingText{
     display: none;
